# QDataVis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
Headers/: BinaryTree.h  MainWindow.h  MainWindow.ui  Node.h  PlotPropertiesWindow.h  PlotPropertiesWindow.ui  QCustomPlot_custom.h  QPenDialog.h  QPenDialog.ui
QCustomPlot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
QCustomPlotNoSub/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
QDataVis/: CMakeLists.txt
QDataVis/Headers/: BinaryTree.h  BinaryTree.hpp  DataSet.hpp  Graph.hpp  MainWindow.h  MainWindow.hpp  MainWindow.ui  Node.h  Node.hpp  PlotPropertiesWindow.h  PlotPropertiesWindow.hpp  PlotPropertiesWindow.ui  PointWindow.h  PointWindow.hpp  PointWindow.ui  QCPItemTextCustom.hpp  QCustomPlotCustom.hpp  QCustomPlot_custom.h  QCustomPlot_custom.hpp  QPenDialog.h  QPenDialog.hpp  QPenDialog.ui  QTextEditCustom.hpp  SettingManager.hpp  Thread.hpp
QDataVis/Resources/: icon.xpm  resources.qrc
QDataVis/Sources/: BinaryTree.cpp  DataSet.cpp  MainWindow.cpp  Node.cpp  PlotPropertiesWindow.cpp  PointWindow.cpp  QCustomPlotCustom.cpp  QCustomPlot_custom.cpp  QPenDialog.cpp  QTextEditCustom.cpp  Thread.cpp  main.cpp
QDataVis_tests/: BinaryTree_tests.cpp  CMakeLists.txt
Resources/: test.mmd
Sources/: BinaryTree.cpp  MainWindow.cpp  Node.cpp  PlotPropertiesWindow.cpp  QCustomPlot_custom.cpp  QPenDialog.cpp  Thread.cpp  main.cpp
Tests/: BinaryTreeTest.cpp  CMakeLists.txt
Tests/Octave/: QRZerl_mit_Ausgleich.m  data.txt  data1.txt
dependencies/qcustomplot/: CMakeLists.txt
dependencies/qcustomplot/include/: qcustomplot.h
dependencies/windeploy DLLs/: windeploy.bat
octave/: QRZerl_mit_Ausgleich.m  data1.txt
